@@ -1,5 +1,7 @@
 * 0.7 : unreleased
+ - Provide default string-based field for schema field types unknown to
  - Escape forward slash characters for compatibility with Solr 4.0 (@davidjb)
+   Sunburnt. (@davidjb)
  - Fix handling of queries with ``boost_relevancy`` applied - boost was 
    previously lost in some cases. (@davidjb)
  - Ensure 'more like this' results are transformed using a query's
